<resources>
    <string name="app_name">Calculadora</string>
    <string name="boton7">7</string>
    <string name="boton8">8</string>
    <string name="boton9">9</string>
    <string name="mas">+</string>
    <string name="boton4">4</string>
    <string name="boton5">5</string>
    <string name="boton6">6</string>
    <string name="menos">-</string>
    <string name="boton1">1</string>
    <string name="boton2">2</string>
    <string name="multiplicacion">*</string>
    <string name="boton3">3</string>
    <string name="punto">.</string>
    <string name="boton0">0</string>
    <string name="igual">=</string>
    <string name="division">/</string>
    <string name="borrar">C</string>

</resources>
